[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxheapq"
version = "0.1.0"
description = "MaxHeap utilities for Python with custom key support"
authors = [
    { name = "Kunj", email = "your.email@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourusername/maxheapq"
