[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heapqplus"
version = "0.1.0"
description = "heapqplus utilities for Python with custom key support"
authors = [
    { name = "Kunj", email = "kunj@avvenir.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/kunjpatel49/heapqplus"
